add build check for system libsodium

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,11 @@
 bin_PROGRAMS = shadowvpn
 
 lib_LTLIBRARIES = libshadowvpn.la
-
+if !HAVE_SODIUM
 SUBDIRS = ../libsodium
-
 AM_CFLAGS = -I$(srcdir)/../libsodium/src/libsodium/include
+endif
+
 
 libshadowvpn_la_SOURCES = log.c \
 	log.h \
@@ -30,8 +31,9 @@ if WIN32
 libshadowvpn_la_SOURCES += win32.c win32.h
 endif
 
+if !HAVE_SODIUM
 libshadowvpn_la_LIBADD = ../libsodium/src/libsodium/libsodium.la
-
+endif
 shadowvpn_SOURCES = main.c
 
 shadowvpn_LDADD = libshadowvpn.la
