--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS = shadowvpn
 
 lib_LTLIBRARIES = libshadowvpn.la
-if !HAVE_SODIUM
+
+if NO_SYS_SODIUM
 SUBDIRS = ../libsodium
 AM_CFLAGS = -I$(srcdir)/../libsodium/src/libsodium/include
 endif
@@ -31,7 +32,7 @@ if WIN32
 libshadowvpn_la_SOURCES += win32.c win32.h
 endif
 
-if !HAVE_SODIUM
+if NO_SYS_SODIUM
 libshadowvpn_la_LIBADD = ../libsodium/src/libsodium/libsodium.la
 endif
 shadowvpn_SOURCES = main.c
