Update openwrt Makefile

--- a/openwrt/Makefile
+++ b/openwrt/Makefile
@@ -2,9 +2,9 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ShadowVPN
 PKG_VERSION:=0.2.1
-PKG_RELEASE=$(PKG_SOURCE_VERSION)
+PKG_RELEASE=$(shell LC_ALL=C git rev-parse --short HEAD)
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG-VERSION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.gz
 PKG_SOURCE_URL:=https://github.com/lhyqy5/ShadowVPN
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_SUBDIR:=ShadowVPN
@@ -14,7 +14,7 @@ PKG_MAINTAINER:=clowwindy <clowwindy42@gmail.com>
 PKG_LICENSE:=MIT
 PKG_LICENSE_FILES:=LICENSE
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)/$(PKG_NAME)
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 
 PKG_INSTALL:=1
 PKG_FIXUP:=autoreconf
